# spec_spars

./: .gitignore  Cargo.toml  README.md  build.rs  cluster_test.sh  config.toml  example_config.toml  jl_mtx_process.sh  setup.sh  setup_tests.sh  test.r
benches/: my_benchmark.rs
experiment_results/basic_exploration/: plot_basic_exploration.r  plot_basic_exploration_kron.r
experiment_results/jl_factor/: plot_jl_dim_sensitivity.r
experiment_results/jl_scaling/: plot_jl_scaling_sensitivity.r
include/: auxilliary.hpp  custom_cg.hpp  example.h  pre_process.hpp
reference_implementation/: jsetup.jl  leverage_score_approx.jl  solving_with_sketch.jl  stream_sparsify.jl  txt_to_mtx.jl
src/: example.cc  experiments.rs  jl_sketch.rs  lib.rs  main.rs  sparsifier.rs  stream.rs  tests.rs  utils.rs
