[package]
name = "spec_spars"
version = "0.1.0"
edition = "2024"

[dependencies]
cxx = "1.0"
sprs = {version = "0.11.3", features = ["approx"]}
ndarray = "0.16.1"
rand = "0.8.5"
ndarray-rand = "0.15.0"
fasthash = "0.4.0"
approx = "0.5.1"
ndarray-csv = "0.5.3"
csv = "1.3.1"
rand_xoshiro = "0.7.0"
num-traits = "0.2.19"
clap = { version = "4.5.54", features = ["derive"] }

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[lib]
bench = false
